cadastro-k8s/cadastro.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  namespace: api-app
spec:
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      serviceAccountName: catalogo-service-account
      containers:
      - name: api-container
        image: patrickpk4/catalogo:v1.0
        resources:
          requests:
            memory: "128Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "70m"
        ports:
        - containerPort: 80
          name: http 
        - containerPort: 443
          name: https 
        imagePullPolicy: Always
        readinessProbe:
         httpGet:
           path: /read
           port: 80
           scheme: HTTP 
         periodSeconds: 5
         timeoutSeconds: 2
         failureThreshold: 5  
        livenessProbe:
         httpGet:
           path: /health
           port: 80
           scheme: HTTP
         periodSeconds: 5
         timeoutSeconds: 2
         failureThreshold: 5 
      affinity:
          podAffinity:
            preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 20
              podAffinityTerm:
               labelSelector:
                matchExpressions:
                - key: app 
                  operator: In 
                  values: 
                  - mongodb
               topologyKey: kubernetes.io/hostname  
          podAntiAffinity:
            preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 10
              podAffinityTerm:
               labelSelector:
                matchExpressions:
                - key: app 
                  operator: In 
                  values:
                  - api   
               topologyKey: kubernetes.io/hostname
