cadastro-k8s/service-cadastro.yaml
apiVersion: v1
kind: Service 
metadata:
  name: api-service
  namespace: api-app
spec:
  selector:
    app: api
  ports:
   - port: 80
     targetPort: 80
     name: http 
   - port: 443
     targetPort: 443
     name: https 
  type: NodePort
