cadastro-k8s/networkpolicy-cadastro.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
 name: allow-ctalogo-mongodb
spec:
  podSelector:
   matchLabels:
    app: api
  policyTypes:
   - Ingress 
   - Egress
  ingress: 
   - from:
     - podSelector:
        matchLabels:
          app: mongodb
     ports:
      - protocol: TCP
        port: 27017
  egress:
   - to: 
     - podSelector:
        matchLabels:
          app: mongodb
     ports:
     - protocol: TCP
       port: 27017
   - to:
     - namespaceSelector:
        matchLabels:
         kubernetes.io/metadata.name: kube-system
       podSelector:
        matchLabels:
         k8s-app: kube-dns
     ports:
     - protocol: TCP
       port: 53
     - protocol: UDP
       port: 53
